(feat) new footer layout

--- a/Builds/VisualStudio2017_1/NewProject_App.vcxproj
+++ b/Builds/VisualStudio2017_1/NewProject_App.vcxproj
@@ -139,6 +139,7 @@
     <Lib/>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\GUI\Footer.cpp"/>
     <ClCompile Include="..\..\Source\Main.cpp"/>
     <ClCompile Include="..\..\Source\MainComponent.cpp"/>
     <ClCompile Include="..\..\..\..\Libraries\JUCE\modules\juce_analytics\analytics\juce_Analytics.cpp">
@@ -2110,6 +2111,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\GUI\Footer.h"/>
     <ClInclude Include="..\..\Source\MainComponent.h"/>
     <ClInclude Include="..\..\..\..\Libraries\JUCE\modules\juce_analytics\analytics\juce_Analytics.h"/>
     <ClInclude Include="..\..\..\..\Libraries\JUCE\modules\juce_analytics\analytics\juce_ButtonTracker.h"/>
